[tool.poetry]
name = "pqtoolkit"
version = "0.1.0"
description = "A python interface for interacting with PQ toolkit servers"
authors = [
    "Paweł Müller <pawelmuller42@gmail.com>",
    "Bartlomiej Piktel <b.piktel@stud.elka.pw.edu.pl>",
    "Grzegorz Rusinek <g.rusinek@stud.elka.pw.edu.pl>",
    "Igor Matynia <igor.matynia@gmail.com>",
    "Jan Kowalczewski <100453439+jkowalc@users.noreply.github.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.5.3"
requests = "2.31.0"

[tool.poetry.dev-dependencies]
ruff = "0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
